<resources>
    <string name="app_name">PG Locator</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="select_user_type">Select User Type</string>
    <string name="register">Register</string>
    <string name="add_pg">Add PG</string>
    <string name="complete_register_title">Welcome %s!! \nPlease Complete Registration</string>
    <string name="complete_register">Complete Registration</string>
    <string name="address">Address</string>
    <string name="complete">Complete</string>

    <array name="userType">
        <item>User</item>
        <item>PG</item>
    </array>
    <string name="title_activity_p_g_home">PGHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user">User</string>
    <string name="menu_home">Home</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_feedback">Feedback</string>
    <string name="add_photo">+ Photo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="people_allowed">People Allowed (Max)</string>
    <string name="rent">Rent (per month)</string>
    <string name="pg_details">PG Details</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="request">Request</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="request_details">Request Details</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="add_your_feedback">Add your feedback</string>
    <string name="user_feedbacks">User Feedbacks</string>
    <string name="location">Location</string>
</resources>